[gd_scene load_steps=24 format=2]

[ext_resource path="res://MainMenu/stars.jpg" type="Texture" id=1]
[ext_resource path="res://MainMenu/moon.glb" type="PackedScene" id=2]
[ext_resource path="res://MainMenu/moon.gd" type="Script" id=3]
[ext_resource path="res://Monocraft.otf" type="DynamicFontData" id=4]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://MainMenu/menu.ogg" type="AudioStream" id=6]
[ext_resource path="res://MainMenu/RCKT.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/change.sfxr" type="AudioStream" id=8]
[ext_resource path="res://INFont.tres" type="DynamicFont" id=9]

[sub_resource type="Environment" id=1]
background_mode = 2
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.301961, 1, 0, 0.47451 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.196078, 1, 0, 0.501961 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0666667, 1, 0, 0.470588 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.196078, 1, 0, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.282353, 1, 0, 0.490196 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=6]
resource_name = "Play"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CSGMesh/Sprite3D2:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -4.76837e-07, -0.25, 0, 0.25, 0, -57.8843, -0.3, 49.7664, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CSGMesh/Sprite3D2:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1.98489, -0.25, 0, 0.25, 0, 7.91572, -0.3, -6.02816, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CSGMesh/Sprite3D2:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Loop:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CSGMesh:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -13.5464, -0.25, 0, 0.3, -5.86555, 21.6517, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CSGMesh:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 173.212, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CSGMesh:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -1, -0.0800109, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="CubeMesh" id=5]

[sub_resource type="DynamicFont" id=13]
size = 390
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
size = 60
font_data = ExtResource( 4 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 8.3944, 0, 0, 0, 8.95925, 0, 0, 0, 7.8519, 0, 0, -16.905 )
texture = ExtResource( 1 )

[node name="moon" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0125618, 4.20026, -0.0942988 )
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19.3019 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 570.0
margin_top = 675.0
margin_right = 1351.0
margin_bottom = 1038.0
custom_constants/separation = 60

[node name="PLAY" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 781.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "PLAY"

[node name="HOW_TO_PLAY" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 141.0
margin_right = 781.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "HOW TO PLAY"

[node name="EXIT" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 282.0
margin_right = 781.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "EXIT"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -844.0
margin_top = -455.0
margin_right = 2568.0
margin_bottom = 1497.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Play = SubResource( 6 )
anims/Start = SubResource( 4 )

[node name="Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Loop"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
mix_target = 2

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 0.972181, 0.234233, 0, -0.234233, 0.972181, 0, 4.18051, 0.0279841 )
mesh = SubResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="CSGMesh"]
transform = Transform( -0.944135, 0.318795, -0.0835416, 0.32373, 0.849676, -0.416231, -0.0617091, -0.420024, -0.905412, -4.76837e-07, -1.98489, -6.17861 )
texture = ExtResource( 7 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.267195, 6.50096, 5.44978 )
modulate = Color( 0, 0.8, 0.705882, 1 )
text = "MOONLANDER"
font = SubResource( 13 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 78.0
margin_top = 51.0
margin_right = -55.0
margin_bottom = -42.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_top = 137.0
margin_right = -63.0
margin_bottom = -51.0
custom_fonts/mono_font = ExtResource( 9 )
custom_fonts/bold_italics_font = ExtResource( 9 )
custom_fonts/italics_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 9 )
custom_fonts/normal_font = ExtResource( 9 )
text = "Ваша задача - посадить корабль на луну. Для этого:
- Вставать можно только на специально отведённые парковочные места (площадки).
- Горизонтальная скорость при посадке не должна превышать 2 по модулю.
- Вертикальная скорость при посадке не должна превышать 3 по модулю.
- Угол поворота не должен превышать 5 градусов по модулю.

Управление:
- Стрелка вверх - ускорение в направлении ракеты.
- Стрелка влево/вправо - поворот ракеты.

!!! В качестве тормоза используется ускорение в направлении противоположном движению ракеты.
!!!Гравитация есть и воздействует постоянно.

Good luck and have fun!"

[node name="Close" type="Button" parent="CanvasLayer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1628.0
margin_top = 35.0
margin_right = -47.0
margin_bottom = -897.0
custom_fonts/font = SubResource( 14 )
text = "X"

[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/PLAY" to="." method="_on_PLAY_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/PLAY" to="." method="_on_PLAY_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/HOW_TO_PLAY" to="." method="_on_PLAY_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HOW_TO_PLAY" to="." method="_on_HOW_TO_PLAY_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/EXIT" to="." method="_on_EXIT_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/EXIT" to="." method="_on_EXIT_pressed"]
[connection signal="pressed" from="CanvasLayer2/Panel/Close" to="." method="_on_Close_pressed"]
